# supply-chain-analytics

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
config/: __init__.py  settings.py
src/supply_chain_analytics/: main.py
src/supply_chain_analytics/alerting/: __init__.py  alert_manager.py
src/supply_chain_analytics/analytics/: __init__.py  anomaly_detector.py  forecasting.py  statistical_analysis.py
src/supply_chain_analytics/cache/: __init__.py  redis_cache.py
src/supply_chain_analytics/core/: __init__.py  logger.py
src/supply_chain_analytics/dashboard/: __init__.py  app.py
src/supply_chain_analytics/database/: __init__.py  connection.py  migrations.py  models.py
src/supply_chain_analytics/etl/: __init__.py  extractors.py  pipeline.py  transformers.py
src/supply_chain_analytics/models/: schemas.py
tests/: __init__.py
