[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-analytics"
version = "1.0.0"
description = "Real-Time Supply Chain Analytics & Anomaly Detection Platform"
requires-python = ">=3.10"
authors = [{name = "Aryan Neopane"}]
license = {text = "MIT"}

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "plotly>=5.18.0",
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "orjson>=3.9.12",
    "statsmodels>=0.14.1",
    "click>=8.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "mypy>=1.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true